High Resolution Desktop alignment fix in employee

--- a/src/app/templates/modules/employee/components/employee-add/employee-add.component.scss
+++ b/src/app/templates/modules/employee/components/employee-add/employee-add.component.scss
@@ -51,6 +51,10 @@ label{
   color:$table-header-font !important;
 }
 
+.heading1 {
+  color:$table-header-font !important;
+  width: 100%;
+}
 
 button{
   width: 140px;
